<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000080"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dragon_image"
            android:scaleType="centerCrop"
            android:src="@drawable/dragon" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/ImageView"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="sans-serif"
        android:text="@string/title1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView1"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:paddingTop="@dimen/paddingTop"
        android:fontFamily="sans-serif"
        android:text="@string/title2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView2"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="sans-serif"
        android:text="@string/title3"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView3"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="sans-serif"
        android:text="@string/title4"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView4"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="sans-serif"
        android:text="@string/title5"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontSmall"
        android:textStyle="bold" />

    </RelativeLayout>
    </ScrollView>